# fuhan

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json  post-create.sh
fuhan/: fuhan.hpp  internal.hpp  types.hpp
fuhan/seven_pairs/: fuhan.hpp
fuhan/standard/: decomposition.hpp  fuhan.hpp  internal.hpp
fuhan/thirteen_orphans/: fuhan.hpp
test/: CMakeLists.txt
test/chiniisou/: CMakeLists.txt  run.cpp
test/majsoul-scoring-corpus/: CMakeLists.txt  test-runner.cpp  test-runner.sh
